refactoring - add a class to control the stack level